--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@0xproject/migrations": "^1.0.14",
+    "@0xproject/order-utils": "^1.0.7",
     "bignumber.js": "^8.0.1",
     "bn-chai": "^1.0.1",
     "bn.js": "^4.11.8",
     "chai": "^4.2.0",
-    "openzeppelin-solidity": "^2.1.1"
+    "openzeppelin-solidity": "^2.1.1",
+    "truffle-contract": "^4.0.4"
   }
 }
